Fix clickability of call to action
The button would sometimes overlap behind the splash title making it
unclickable.

--- a/src/components/SplashPage/SplashPage.css
+++ b/src/components/SplashPage/SplashPage.css
@@ -99,6 +99,7 @@
 .SplashPage-BodyCallToAction {
   @apply --heading-xs;
   flex: 1;
+  z-index: 1;
 }
 
 @media (--extra-small-screen) {
